--- a/lab06/recipe.css
+++ b/lab06/recipe.css
@@ -42,7 +42,7 @@ background-size: 400px 400px;}
 
 @media (max-width: 768px) {
 
-   body {display: flex; flex-wrap: nowrap; flex-direction: column;}
+  .container {display: flex; flex-wrap: nowrap; flex-direction: column;}
 
 
    }
