--- a/lab06/recipe.css
+++ b/lab06/recipe.css
@@ -40,9 +40,10 @@ background-repeat: no-repeat;
 background-position: left;
 background-size: 400px 400px;}
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
 
-  .container {display: flex; flex-wrap: nowrap; flex-direction: column;}
+   .container{grid-template-columns: 1fr;}
+
 
 
    }
