--- a/lab06/recipe.css
+++ b/lab06/recipe.css
@@ -42,7 +42,10 @@ background-size: 400px 400px;}
 
 @media screen and (max-width: 768px) {
 
-   .container{grid-template-columns: 1fr;}
+  body{display:flex; flex-wrap:wrap; flex-direction: column; background-color: pink; 
+border: 3px ridge #330000; 
+border-radius: 15px;
+box-shadow: 5px 5px 5px #828282;}
 
 
 
