--- a/lab06/recipe.css
+++ b/lab06/recipe.css
@@ -42,10 +42,21 @@ background-size: 400px 400px;}
 
 @media screen and (max-width: 768px) {
 
-  body{display:flex; flex-wrap:wrap; flex-direction: column; background-color: pink; 
+@media screen and (max-width: 768px) {
+
+  body{ background-color: pink; 
 border: 3px ridge #330000; 
 border-radius: 15px;
 box-shadow: 5px 5px 5px #828282;}
+
+.container { width: 960px;
+margin-left: auto;
+margin-right: auto; }
+
+.ingredients{ float: left;
+   width: 90px; }
+
+   .instructions{margin-left: 500px}
 
 
 
