--- a/lab06/recipe.css
+++ b/lab06/recipe.css
@@ -63,6 +63,10 @@ background-size: 400px 400px;}
     margin-left: 0; 
   }
 
+ #emptyspace{background-image: url(images/Ingredients.jpg);
+background-repeat: no-repeat;
+background-position: left;
+background-size: 300px 300px;}
 
 
 
