--- a/lab06/recipe.css
+++ b/lab06/recipe.css
@@ -12,7 +12,7 @@ h2 a:visited { color: rebeccapurple; }
 h2 a:hover { color: coral; }
 
 h4 a:link { color: lightblue; }
-h4 a:visited { color: seagreen; }
+h4 a:visited { color: rebeccapurple; }
 h4 a:hover { color: coral; }
 
  
